added comment and rating section - very bareboned, need to style product page

--- a/public/index.html
+++ b/public/index.html
@@ -71,13 +71,13 @@
                         
 
         <div class="container">
-            <!-- this is where browse copy begins -->
+            <!-- Browse by Style -->
             <div class="row">
                 <h1 class="col-md-12 browse-by-style">BROWSE BY STYLE</h1>
             </div>
 
 
-            <!-- category selection begins here -->
+            <!-- Categories -->
             <div class="row">
                 <div class="col-4">
                     <img src="assets/products/new/basketballN.png" alt="Basketball Shoes" class="image">
