--- a/public/index.html
+++ b/public/index.html
@@ -48,13 +48,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/carousel/1c copy.png" class="d-block w-10" alt="...">
+                                <img src="assets/carousel/1c.png" class="d-block w-10" alt=".." href="search.html" >
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/carousel/2c copy.png" class="d-block w-10" alt="...">
+                                <img src="assets/carousel/2c.png" class="d-block w-10" alt=".." href="search.html" >
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/carousel/3c copy.png" class="d-block w-10" alt="...">
+                                <img src="assets/carousel/3c.png" class="d-block w-10" alt="..." href="search.html" >
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -92,7 +92,7 @@
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/new/loungeN.png" alt="Lounge Shoes" class="image">
+                    <img src="assets/products/new/loungeN2.png" alt="Lounge Shoes" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">LOUNGE</a>                   
                     </div>    
@@ -100,19 +100,19 @@
             </div>
             <div class="row bottom-browse-by-style-div">
                 <div class="col-4">
-                    <img src="assets/products/new/casualN.png" alt="Casual Sneakers" class="image">
+                    <img src="assets/products/new/causualN.png" alt="Casual Sneakers" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">CASUAL</a>   
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/new/altN.png" alt="Boots" class="image">
+                    <img src="assets/products/new/bootsN.png" alt="Boots" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BOOTS</a>       
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/new/runing.png" alt="Limited Edition Sneakers" class="image">
+                    <img src="assets/products/new/viewallN.png" alt="Limited Edition Sneakers" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">VIEW ALL</a>    
                     </div>    
