--- a/public/index.html
+++ b/public/index.html
@@ -48,13 +48,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/carousel/1c.png" class="d-block w-10" alt=".." href="search.html" >
+                                <img src="assets/carousel/1c.png" class="d-block w-10" alt="..">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/carousel/2c.png" class="d-block w-10" alt=".." href="search.html" >
+                                <img src="assets/carousel/2c.png" class="d-block w-10" alt="..">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/carousel/3c.png" class="d-block w-10" alt="..." href="search.html" >
+                                <img src="assets/carousel/3c.png" class="d-block w-10" alt="...">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
