--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="https://kit.fontawesome.com/a7b1c78f86.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 
+    <title>Ice Box</title>
 </head>
 
 <body>
