review submission and pull from reviews db is working now

--- a/public/product.html
+++ b/public/product.html
@@ -70,25 +70,13 @@
 
               <!-- FOR THE BACKEND: id's used below are reviews-container (if you want to dynamically create), first-reviewer, reviwer-rating, reviewer-date, reviewer-comment -->
               <div class="reviews-container">
-                <div class="mt-4" id="first-reviewer">
-                    <h4 id="reviewer-name">Jhon Doe</h4>
-                    <div id="reviwer-rating"></div>
-                    <span id="reviewer-date">- 20 October, 2018</span>
-                    <p id="reviewer-comment">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
-                </div>
-                <div class="mt-4" id="second-reviewer">
+                <!-- <div class="mt-4" id="first-reviewer">
                   <h4 id="reviewer-name">Jhon Doe</h4>
                   <div id="reviwer-rating"></div>
                   <span id="reviewer-date">- 20 October, 2018</span>
                   <p id="reviewer-comment">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
+                </div> -->
               </div>
-              <div class="mt-4" id="third-reviewer">
-                <h4 id="reviewer-name">Jhon Doe</h4>
-                <div id="reviwer-rating"></div>
-                <span id="reviewer-date">- 20 October, 2018</span>
-                <p id="reviewer-comment">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
-              </div>
-            </div>
           </div>
 
             
