buttons on the front page now store locally

--- a/public/index.html
+++ b/public/index.html
@@ -81,43 +81,43 @@
 
             <!-- Categories -->
             <div class="row">
-                <div class="col-4"><a href="search.html">
-                    <img src="assets/products/new/basketballN.png" href="search.html" alt="Basketball Shoes" class="image">
+                <div class="col-4">
+                    <img src="assets/products/new/basketballN.png" alt="Basketball Shoes" class="image shoe-cat-picker" id="basketball">
                 </a>
                     <div class="text-center">
-                        <a id="basketball" href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">BASKETBALL</a>
+                        <a id="basketball" class="btn shoe-style-btn shoe-cat-picker" role="button" aria-pressed="true">BASKETBALL</a>
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/new/training.png" href="/public/search.html" alt="Sneakers" class="image">
+                    <img src="assets/products/new/training.png" alt="Sneakers" class="image shoe-cat-picker" id="training">
                     <div class="text-center">
-                        <a id="training" href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">TRAINING</a>
+                        <a id="training" class="btn shoe-style-btn shoe-cat-picker" role="button" aria-pressed="true">TRAINING</a>
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/new/loungeN2.png" href="/public/search.html" alt="Lounge Shoes" class="image">
+                    <img src="assets/products/new/loungeN2.png" alt="Lounge Shoes" class="image shoe-cat-picker" id="lounge">
                     <div class="text-center">
-                        <a id="lounge" href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">LOUNGE</a>                   
+                        <a id="lounge" class="btn shoe-style-btn shoe-cat-picker" role="button" aria-pressed="true">LOUNGE</a>                   
                     </div>    
                 </div>
             </div>
             <div class="row bottom-browse-by-style-div">
                 <div class="col-4">
-                    <img src="assets/products/new/causualN.png" href="/public/search.html" alt="Casual Sneakers" class="image">
+                    <img src="assets/products/new/causualN.png" alt="Casual Sneakers" class="image shoe-cat-picker" id="casual">
                     <div class="text-center">
-                        <a id="casual" href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">CASUAL</a>   
+                        <a id="casual" class="btn shoe-style-btn shoe-cat-picker" role="button" aria-pressed="true">CASUAL</a>   
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/new/bootsN.png" href="/public/search.html" alt="Boots" class="image">
+                    <img src="assets/products/new/bootsN.png" alt="Boots" class="image shoe-cat-picker" id="boots">
                     <div class="text-center">
-                        <a id="boots" href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">BOOTS</a>       
+                        <a id="boots" class="btn shoe-style-btn shoe-cat-picker" role="button" aria-pressed="true">BOOTS</a>       
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/new/viewallN.png" href="/public/search.html" alt="Limited Edition Sneakers" class="image">
+                    <img src="assets/products/new/viewallN.png" alt="Limited Edition Sneakers" class="image shoe-cat-picker" id="all">
                     <div class="text-center">
-                        <a href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">VIEW ALL</a>    
+                        <a id="all" class="btn shoe-style-btn shoe-cat-picker" role="button" aria-pressed="true">VIEW ALL</a>    
                     </div>    
                 </div>
             </div>
