--- a/public/index.html
+++ b/public/index.html
@@ -81,48 +81,63 @@
 
             <!-- Categories -->
             <div class="row">
-                <div class="col-4"><a href="search.html">
-                    <img src="assets/products/new/basketballN.png" href="search.html" alt="Basketball Shoes" class="image">
+                <div class="col-md-4"><a href="/search">
+                    <img src="assets/products/new/basketballN.png" alt="Basketball Shoes" class="image">
                 </a>
                     <div class="text-center">
-                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BASKETBALL</a>
+                        <a href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">BASKETBALL</a>
                     </div>    
                 </div>
-                <div class="col-4">
-                    <img src="assets/products/new/training.png" href="/public/search.html" alt="Sneakers" class="image">
-                    <div class="text-center">
-                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">TRAINING</a>
-                    </div>    
-                </div>
-                <div class="col-4">
-                    <img src="assets/products/new/loungeN2.png" href="/public/search.html" alt="Lounge Shoes" class="image">
-                    <div class="text-center">
-                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">LOUNGE</a>                   
-                    </div>    
-                </div>
-            </div>
-            <div class="row bottom-browse-by-style-div">
-                <div class="col-4">
-                    <img src="assets/products/new/causualN.png" href="/public/search.html" alt="Casual Sneakers" class="image">
-                    <div class="text-center">
-                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">CASUAL</a>   
-                    </div>    
-                </div>
-                <div class="col-4">
-                    <img src="assets/products/new/bootsN.png" href="/public/search.html" alt="Boots" class="image">
-                    <div class="text-center">
-                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BOOTS</a>       
-                    </div>    
-                </div>
-                <div class="col-4">
-                    <img src="assets/products/new/viewallN.png" href="/public/search.html" alt="Limited Edition Sneakers" class="image">
-                    <div class="text-center">
-                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">VIEW ALL</a>    
-                    </div>    
-                </div>
+
+            <div class="col-md-4"><a href="/search">
+                <img src="assets/products/new/training.png" alt="Sneakers" class="image">
+            </a>
+                <div class="text-center">
+                    <a href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">TRAINING</a>
+                </div>    
             </div>
 
+        <div class="col-md-4"><a href="/search">
+            <img src="assets/products/new/loungeN2.png" alt="Lounge Shoes" class="image">
+        </a>
+            <div class="text-center">
+                <a href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">LOUNGE</a>
+            </div>    
         </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4"><a href="/search">
+            <img src="assets/products/new/causualN.png" alt="Casual Sneakers" class="image">
+        </a>
+            <div class="text-center">
+                <a href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">CASUAL</a>
+            </div>    
+        </div>
+    
+
+    <div class="col-md-4"><a href="/search">
+        <img src="assets/products/new/bootsN.png" alt="Boots" class="image">
+    </a>
+        <div class="text-center">
+            <a href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">BOOTS</a>
+        </div>    
+    </div>
+
+
+<div class="col-md-4"><a href="/search">
+    <img src="assets/products/new/viewallN.png" alt="Limited Edition Sneakers" class="image">
+</a>
+    <div class="text-center">
+        <a href="/search" class="btn shoe-style-btn" role="button" aria-pressed="true">VIEW ALL</a>
+    </div>    
+</div>
+</div>
+
+</div>
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
